- Added styles for Button, RepeatButton and ToggleButton - Added Theme.Test project (for visual presentation Theme)

--- a/Theme/Themes/Generic.xaml
+++ b/Theme/Themes/Generic.xaml
@@ -4,6 +4,9 @@
     
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Theme;component/Themes/SharedResources.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Buttons/Button.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Buttons/RepeatButton.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Buttons/ToggleButton.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
