--- a/Theme/Themes/Buttons/ButtonBase.xaml
+++ b/Theme/Themes/Buttons/ButtonBase.xaml
@@ -14,28 +14,31 @@
         <Setter Property="FontSize" Value="10pt"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
         
-        <Setter Property="FocusVisualStyle">
-            <Setter.Value>
-                <Style>
-                    <Setter Property="Control.Template">
-                        <Setter.Value>
-                            <ControlTemplate>
-                                <Rectangle Stroke="{StaticResource Accent}"
-                                           StrokeThickness="{StaticResource BoldThicknessValue}"
-                                           SnapsToDevicePixels="True"/>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </Setter.Value>
-        </Setter>
-        
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Padding" Value="{StaticResource BoldPadding}"/>
         
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
+        
+        <Setter Property="FocusVisualStyle">
+            <Setter.Value>
+                <Style>
+                    <Setter Property="Control.Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Rectangle Margin="{StaticResource DefaultPadding}" 
+                                           Fill="{StaticResource Transparent}"
+                                           Stroke="{StaticResource Foreground}"
+                                           StrokeThickness="{StaticResource DefaultThicknessValue}"
+                                           StrokeDashArray="2 1"
+                                           RenderOptions.EdgeMode="Aliased"/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Setter.Value>
+        </Setter>
         
         <Setter Property="Template">
             <Setter.Value>
