--- a/Theme/Themes/Generic.xaml
+++ b/Theme/Themes/Generic.xaml
@@ -7,6 +7,8 @@
         <ResourceDictionary Source="/Theme;component/Themes/Buttons/Button.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Buttons/RepeatButton.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Buttons/ToggleButton.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Buttons/CheckBox.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Buttons/RadioButton.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
