--- a/Theme/Themes/TextBoxes/PasswordBox.xaml
+++ b/Theme/Themes/TextBoxes/PasswordBox.xaml
@@ -6,7 +6,7 @@
         <ResourceDictionary Source="/Theme;component/Themes/TextBoxes/Control.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource BoxesBase}">
+    <Style TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource BoxesBaseStyle}">
         
         <Setter Property="PasswordChar" Value="●"/>
 
@@ -15,7 +15,6 @@
         
         <Style.Triggers>
             <Trigger Property="IsKeyboardFocusWithin" Value="True">
-                <Setter Property="Background" Value="{StaticResource Background}"/>
                 <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
                 <Setter Property="BorderThickness" Value="{StaticResource BoldThickness}"/>
                 <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
