--- a/Theme.Test/MainWindow.xaml
+++ b/Theme.Test/MainWindow.xaml
@@ -2,19 +2,21 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow"
+        Background="{StaticResource Background}"
+        MouseLeftButtonDown="WindowMouseLeftButtonDown"
         Width="800" Height="600">
-    <Grid>
+    <Grid Background="{StaticResource Transparent}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="125"/>
-            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="125"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="125"/>
+            <ColumnDefinition Width="125"/>
+            <ColumnDefinition Width="125"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -56,6 +58,10 @@
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
+        <TextBlock Grid.Column="1"
+                   Grid.Row="3"
+                   Margin="15"
+                   Text="TextBlock"/>
         <ComboBox Grid.Column="2"
                   Grid.Row="0"
                   Margin="15"
@@ -85,5 +91,15 @@
                      Maximum="100"
                      Minimum="0"
                      Margin="15"/>
+        <ScrollViewer Grid.Column="4"
+                      Grid.Row="0"
+                      Grid.RowSpan="2"
+                      HorizontalScrollBarVisibility="Visible"
+                      VerticalScrollBarVisibility="Visible">
+            <TextBlock TextWrapping="Wrap"
+                       Width="200">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </TextBlock>
+        </ScrollViewer>
     </Grid>
 </Window>
