--- a/Theme/Themes/TextBoxes/TextBoxBase.xaml
+++ b/Theme/Themes/TextBoxes/TextBoxBase.xaml
@@ -6,7 +6,7 @@
         <ResourceDictionary Source="/Theme;component/Themes/TextBoxes/Control.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="TextBoxesBase" TargetType="{x:Type TextBoxBase}" BasedOn="{StaticResource BoxesBase}">
+    <Style x:Key="TextBoxesBaseStyle" TargetType="{x:Type TextBoxBase}" BasedOn="{StaticResource BoxesBaseStyle}">
         
         <Setter Property="CaretBrush" Value="{StaticResource Foreground}"/>
         <Setter Property="SelectionBrush" Value="{StaticResource ForegroundMiddlelight}"/>
@@ -18,7 +18,6 @@
                     <Condition Property="IsReadOnly" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background" Value="{StaticResource Background}"/>
                     <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
                     <Setter Property="BorderThickness" Value="{StaticResource BoldThickness}"/>
                     <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
