--- a/Theme.Test/MainWindow.xaml
+++ b/Theme.Test/MainWindow.xaml
@@ -1,10 +1,11 @@
 ﻿<Window x:Class="Elysium.Theme.Test.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:InternalControls="clr-namespace:Elysium.Theme.Controls;assembly=Theme"
         Title="MainWindow"
         Background="{StaticResource Background}"
         MouseLeftButtonDown="WindowMouseLeftButtonDown"
-        Width="800" Height="600">
+        Width="1000" Height="600">
     <Grid Background="{StaticResource Transparent}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="125"/>
@@ -12,7 +13,7 @@
             <ColumnDefinition Width="125"/>
             <ColumnDefinition Width="125"/>
             <ColumnDefinition Width="125"/>
-            <ColumnDefinition Width="125"/>
+            <ColumnDefinition Width="225"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
@@ -102,9 +103,17 @@
                 Minimum="0" Value="50" Maximum="100"
                 Margin="15"
                 HorizontalAlignment="Center"/>
-        <ProgressBar Grid.Column="5"
-                     Grid.Row="0"
-                     Minimum="0" Value="50" Maximum="100"
-                     Margin="15"/>
+        <InternalControls:ProgressBar Grid.Column="5"
+                                      Grid.Row="0"
+                                      Minimum="0" Value="50" Maximum="100"
+                                      IsIndeterminate="{x:Null}"
+                                      Margin="15"/>
+        <InternalControls:ProgressBar Grid.Column="5"
+                                      Grid.Row="1"
+                                      Grid.RowSpan="2"
+                                      Orientation="Vertical"
+                                      Minimum="0" Value="50" Maximum="100"
+                                      IsIndeterminate="{x:Null}"
+                                      Margin="15"/>
     </Grid>
 </Window>
