--- a/Theme/Themes/Generic.xaml
+++ b/Theme/Themes/Generic.xaml
@@ -15,6 +15,7 @@
         <ResourceDictionary Source="/Theme;component/Themes/Scrolls/ScrollBar.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Scrolls/ScrollViewer.xaml"/>
         <ResourceDictionary Source="/Theme;component/Themes/Ranges/Slider.xaml"/>
+        <ResourceDictionary Source="/Theme;component/Themes/Ranges/ProgressBar.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
